<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

   <!-- POM file generated with GWT webAppCreator -->
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <groupId>org.exoplatform.ide</groupId>
      <artifactId>exo-ide-parent</artifactId>
      <version>2.0-SNAPSHOT</version>
   </parent>
   <artifactId>exo-ide-client</artifactId>
   <packaging>war</packaging>
   <!--version>2.0-SNAPSHOT</version -->
   <name>eXo IDE2 :: Client</name>

   <properties>
      <!-- GWT needs at least java 1.5 -->
      <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>

   <dependencies>
      <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-servlet</artifactId>
         <scope>runtime</scope>
      </dependency>
      <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
         <scope>provided</scope>
      </dependency>
      <dependency>
         <groupId>com.google.gwt.inject</groupId>
         <artifactId>gin</artifactId>
      </dependency>
      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <!-- needs extra dependencies: objenesis & hamcrest -->
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>com.googlecode.gwt-test-utils</groupId>
         <artifactId>gwt-test-utils</artifactId>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
      </dependency>

      <dependency>
         <groupId>org.exoplatform.ide</groupId>
         <artifactId>exo-ide-vfs</artifactId>
      </dependency>
      <dependency>
         <groupId>org.exoplatform.ide</groupId>
         <artifactId>exo-ide-vfs-jcr</artifactId>
      </dependency>
      <dependency>
         <groupId>org.exoplatform</groupId>
         <artifactId>exo-jcr-services</artifactId>
      </dependency>
      <dependency>
         <groupId>org.exoplatform.ide</groupId>
         <artifactId>exo-ide-editor</artifactId>
      </dependency>
      <dependency>
         <groupId>org.exoplatform.gwt</groupId>
         <artifactId>exo-gwtframework-commons</artifactId>
      </dependency>
   </dependencies>

   <build>

      <resources>
         <resource>
            <directory>src/main/java</directory>
         </resource>
         <resource>
            <directory>src/main/resources</directory>
         </resource>
      </resources>

      <!-- Generate compiled stuff in the folder used for developing mode -->
      <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>

      <plugins>

         <!-- GWT Maven Plugin -->
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>gwt-maven-plugin</artifactId>
            <version>2.4.0</version>
            <executions>
               <execution>
                       <configuration>
          <extraJvmArgs>-Xss512m -Xmx4024m -XX:MaxPermSize=1024m</extraJvmArgs>
        </configuration>
                  <goals>
                     <goal>compile</goal>
                     <goal>test</goal>
                     <goal>i18n</goal>
                  </goals>
               </execution>
            </executions>
            <!-- Plugin configuration. There are many available options, see gwt-maven-plugin documentation at codehaus.org -->
            <configuration>
            <extraJvmArgs>-Xss512m -Xmx4024m -XX:MaxPermSize=1024m</extraJvmArgs>
               <runTarget>IDE.html</runTarget>
               <hostedWebapp>${webappDirectory}</hostedWebapp>
               <i18nMessagesBundle>org.exoplatform.ide.client.Messages</i18nMessagesBundle>
            </configuration>
         </plugin>

         <!-- Copy static web files before executing gwt:run -->
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <version>2.1.1</version>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>2.3.2</version>
            <configuration>
               <source>1.6</source>
               <target>1.6</target>
            </configuration>
         </plugin>
      </plugins>
   </build>

</project>
